# AWS_ElasticBeanstalk_deploy

./: Dockerfile  README.md  documentation.ipynb  fit_app.py  flask_api.py  model_training.ipynb  pyproject.toml  requirements.txt  rf_clf.joblib
models/: rf_clf.joblib
scripts/: eb_predict.py  flask_api.py  predict.py  train_iris_rf.py
