[tool.poetry]
name = "aws_elasticbeanstalk_deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
joblib = "^1.1.0"
pandas = "^1.3.5"
Flask = "^2.0.2"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
